--- a/style.css
+++ b/style.css
@@ -557,3 +557,19 @@ h4 {
     margin-top: 2rem;
     padding-top: 0.2rem;
 }
+
+
+.right_sidebar .latest_news img {
+    height: 40px;
+}
+
+
+.follow {
+    display: flex;
+    border: 1px solid black;
+    padding: 0.5rem;
+    border-radius: 50px;
+    align-items: center;
+    justify-content: center;
+
+}
